--- a/templates/base_1.html
+++ b/templates/base_1.html
@@ -1,13 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+
+<head>
+	<meta charset="utf-8">
+	<title>{% block title %}{% endblock title %}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
 	<meta name="author" content="">
-	
+
 	<!-- site icon -->
 	<link rel="icon" href="{% static 'img/question.png' %}">
 	<!-- Bootstrap core CSS -->
@@ -23,15 +24,15 @@
 	<link href="{% static 'css/colorbox/colorbox.css' %}" rel="stylesheet">
 
 	<!-- Morris -->
-	<link href="{% static 'css/morris.css' %}" rel="stylesheet"> 
+	<link href="{% static 'css/morris.css' %}" rel="stylesheet">
 
 	<!-- Endless -->
 	<link href="{% static 'css/endless.min.css' %}" rel="stylesheet">
 	<link href="{% static 'css/endless-skin.css' %}" rel="stylesheet">
-  
-  </head>
 
-  <body class="overflow-hidden">
+</head>
+
+<body class="overflow-hidden">
 	<!-- Overlay Div -->
 	<div id="overlay" class="transparent"></div>
 
@@ -44,103 +45,109 @@
 
 		<!-- Footer
 		================================================== -->
-		<footer style="background-color: #65cea7;color: #fff;">
+		<footer style="background-color: #65cea7;color: #fff; margin-left: auto !important; position: fixed !important; bottom: 0 !important; width: 100%;">
 			<div class="row" style="text-align: center;">
 				<div class="col-sm-6">
 					<span class="footer-brand">
 						<strong class="text-danger">Alertify</strong> |
 					</span>
 					<p class="no-margin">
-						&copy; 2019 <strong>Alertify</strong>. ALL Rights Reserved. 
+						&copy; 2019 <strong>Alertify</strong>. ALL Rights Reserved.
 					</p>
 				</div><!-- /.col -->
 			</div><!-- /.row-->
 		</footer>
 	</div>
-	
-	
-    <!-- Le javascript
+
+
+	<!-- Le javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	
+	<!-- Placed at the end of the document so the pages load faster -->
+
 	<!-- Jquery -->
-  <script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
+	<script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
 
-  <!-- Bootstrap -->
-  <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-   
-  <!-- Flot -->
-  <!-- <script src="{% static 'js/jquery.flot.min.js' %}"></script> -->
-   
-  <!-- Morris -->
-  <script src="{% static 'js/rapheal.min.js' %}"></script>
-  <script src="{% static 'js/morris.min.js' %}"></script>
-  
-  <!-- Colorbox -->
-  <script src="{% static 'js/jquery.colorbox.min.js' %}"></script>
+	<!-- Bootstrap -->
+	<script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
 
-  <!-- Sparkline -->
-  <script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
-  
-  <!-- Pace -->
-  <script src="{% static 'js/uncompressed/pace.js' %}"></script>
-  
-  <!-- Popup Overlay -->
-  <script src="{% static 'js/jquery.popupoverlay.min.js' %}"></script>
-  
-  <!-- Slimscroll -->
-  <script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
-  
-  <!-- Modernizr -->
-  <script src="{% static 'js/modernizr.min.js' %}"></script>
-  
-  <!-- Cookie -->
-  <script src="{% static 'js/jquery.cookie.min.js' %}"></script>
-  
-  <!-- Endless -->
-  <!-- <script src="{% static 'js/endless/endless_dashboard.js' %}"></script> -->
-  <script src="{% static 'js/endless/endless.js' %}"></script>
+	<!-- Flot -->
+	<!-- <script src="{% static 'js/jquery.flot.min.js' %}"></script> -->
 
-	<!-- firebase initialize -->
-	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<script defer src="/__/firebase/7.16.0/firebase-app.js"></script>
+	<!-- Morris -->
+	<script src="{% static 'js/rapheal.min.js' %}"></script>
+	<script src="{% static 'js/morris.min.js' %}"></script>
 
-	<!-- TODO: Add SDKs for Firebase products that you want to use
-	https://firebase.google.com/docs/web/setup#available-libraries -->
-	<script defer src="/__/firebase/7.16.0/firebase-database.js"></script>
-	<script defer src="/__/firebase/7.16.0/firebase-messaging.js"></script>
-	<script defer src="/__/firebase/7.16.0/firebase-storage.js"></script>
-	<script defer src="/__/firebase/7.16.0/firebase-analytics.js"></script>
+	<!-- Colorbox -->
+	<script src="{% static 'js/jquery.colorbox.min.js' %}"></script>
 
-	<script defer src="{% static 'js/init-firebase.js' %}"></script>
+	<!-- Sparkline -->
+	<script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
+
+	<!-- Pace -->
+	<script src="{% static 'js/uncompressed/pace.js' %}"></script>
+
+	<!-- Popup Overlay -->
+	<script src="{% static 'js/jquery.popupoverlay.min.js' %}"></script>
+
+	<!-- Slimscroll -->
+	<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+
+	<!-- Modernizr -->
+	<script src="{% static 'js/modernizr.min.js' %}"></script>
+
+	<!-- Cookie -->
+	<script src="{% static 'js/jquery.cookie.min.js' %}"></script>
+
+	<!-- Endless -->
+	<!-- <script src="{% static 'js/endless/endless_dashboard.js' %}"></script> -->
+	<script src="{% static 'js/endless/endless.js' %}"></script>
+
+
 
 	<!-- Initialize Firebase -->
 	<!-- <script src="/__/firebase/init.js"></script> -->
 
+	<!-- firebase initialize -->
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-messaging.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-storage.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.16.0/firebase-analytics.js"></script>
+
+	<!-- Initialize Firebase -->
+	<script defer src="{% static 'js/init-firebase.js' %}"></script>
+
 	<script>
-		// TODO: Replace the following with your app's Firebase project configuration
-		const firebaseConfig = {
-		  apiKey: "AIzaSyA-atkaTHhE-fJm7hcr4njC4_elRa3DrnQ",
-		  authDomain: "citispy-91191.firebaseapp.com",
-		  databaseURL: "https://citispy-91191.firebaseio.com",
-		  projectId: "citispy-91191",
-		  storageBucket: "citispy-91191.appspot.com",
-		  messagingSenderId: "629555630146",
-		  appId: "1:629555630146:web:53153b172b74c280559ddb",
-		  measurementId: "G-TNXTNTCWG5"
-	  };
-	
+		// var database = firebase.database()
+
+		// function readDataChange() {
+		// 	var alertsRef = firebase.database().ref('alerts/');
+		// 	alertsRef.on('value', function (snapshot) {
+		// 		// updateStarCount(postElement, snapshot.val());
+		// 		console.log("Data changed")
+		// 	});
+		// }
+	</script>
+	<!-- <script>
+		// Your web app's Firebase configuration
+		var firebaseConfig = {
+			apiKey: "AIzaSyA-atkaTHhE-fJm7hcr4njC4_elRa3DrnQ",
+			authDomain: "citispy-91191.firebaseapp.com",
+			databaseURL: "https://citispy-91191.firebaseio.com",
+			projectId: "citispy-91191",
+			storageBucket: "citispy-91191.appspot.com",
+			messagingSenderId: "629555630146",
+			appId: "1:629555630146:web:53153b172b74c280559ddb",
+			measurementId: "G-TNXTNTCWG5"
+		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script> -->
+	{% block js %}{% endblock js %}
+</body>
 
-
-		var alertsRef = firebase.database().ref('alerts');
-		alertsRef.on('value', function (snapshot) {
-			console.log("data", snapshot.val());
-			//push notification
-
-		})
-	  </script>
-  {% block js %}{% endblock js %}	
-  </body>
 </html>
