--- a/templates/base_1.html
+++ b/templates/base_1.html
@@ -98,6 +98,8 @@
 	<!-- Cookie -->
 	<script src="{% static 'js/jquery.cookie.min.js' %}"></script>
 
+	<script src="{% static 'js/Chart.bundle.min.js' %}"></script>
+
 	<!-- Endless -->
 	<!-- <script src="{% static 'js/endless/endless_dashboard.js' %}"></script> -->
 	<script src="{% static 'js/endless/endless.js' %}"></script>
